--- a/css/index.css
+++ b/css/index.css
@@ -13,3 +13,4 @@ body {
 .page-header h1 {margin:0; line-height:72px;}
 
 .main {width:920px; margin:0 auto;}
+.main a {font-weight:bold; color:#4CAF50;}
