Update Main Page.
Add Blog Link button

--- a/css/index.css
+++ b/css/index.css
@@ -5,12 +5,34 @@ body {
 	-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
 	font-family:Roboto,RobotoDraft,arial,'Noto Sans KR','Nanum Gothic',sans-serif;
 }
+p {margin:0;}
 
 .ellipsis {overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
+.flex {display:-webkit-box; display:-webkit-flex; display:-ms-flex; display:flex;}
 
-.page-header {background:#009688; width:100%; height:72px; color:white;}
-.page-header-wrap {max-width:920px; margin:0 auto;}
-.page-header h1 {margin:0; line-height:72px;}
+.icons {
+	position:absolute; top:0; right:0; bottom:0; left:0;
+	align-items:center; justify-content:center;
 
-.main {width:920px; margin:0 auto;}
-.main a {font-weight:bold; color:#4CAF50;}
+}
+.icons .icons-element {position:relative; display:block; border-radius:50%; overflow:hidden; color:white;}
+.icons .icons-element .icons-img:after {content:""; position:absolute; top:0; left:0; display:block; width:100%; height:100%;}
+.icons .icons-element:hover .icons-img:after {background:rgba(0,0,0,0.5);}
+
+.icons .icons-element .icons-info {
+	position:absolute; top:0; right:0; bottom:0; left:0;
+	vertical-align:middle; align-items:center; justify-content:center;
+	opacity:0;
+}
+.icons .icons-element:hover .icons-info {opacity:1;}
+.icons .icons-info {font-weight:bold; font-size:32px;}
+
+@media screen and (min-width:900px) {
+	.icons-element ~ .icons-element {margin-left:64px;}
+	.icons .icons-element, .icons .icons-img {width:400px; height:400px;}
+}
+@media screen and (max-width:900px) {
+	.icons {flex-direction:column;}
+	.icons .icons-element {margin:64px; width:calc(100% - 128px);}
+	.icons .icons-info {font-size:24px;}
+}
