--- a/css/index.css
+++ b/css/index.css
@@ -1,7 +1,8 @@
 @charset "utf-8";
 
+html {height:100%;}
 body {
-	margin:0; padding:0;
+	margin:0; padding:0; min-height:100%;
 	-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
 	font-family:Roboto,RobotoDraft,arial,'Noto Sans KR','Nanum Gothic',sans-serif;
 }
@@ -9,6 +10,7 @@ p {margin:0;}
 
 .ellipsis {overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
 .flex {display:-webkit-box; display:-webkit-flex; display:-ms-flex; display:flex;}
+.flex.center {align-items:center; justify-content:center;}
 .flex.vertical {flex-direction:column;}
 /*
         <section class="list">
