--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 		<title>OPNay's Lab</title>
 		<link rel="stylesheet" href="css/index.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css" />
+
+		<!--<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css" />-->
+		<link rel="stylesheet" href="fonts/notosanskr.css">
 		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
 
 		<!-- Verification -->
