--- a/css/index.css
+++ b/css/index.css
@@ -18,5 +18,9 @@ p {margin:0;}
 
 .content {width:100%; height:100%;}
 
-.list {width:320px}
+.list {width:640px}
 .icon {margin-right:8px; width:64px; height:auto; vertical-align:middle;}
+
+@media screen and (max-width:640px) {
+	.list { width:100%;}
+}
