--- a/css/index.css
+++ b/css/index.css
@@ -7,16 +7,25 @@ body {
 	font-family:Roboto,RobotoDraft,arial,'Noto Sans KR','Nanum Gothic',sans-serif;
 }
 p {margin:0;}
+a {text-decoration:none;}
 
 .ellipsis {overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
 .flex {display:-webkit-box; display:-webkit-flex; display:-ms-flex; display:flex;}
 .flex.center {align-items:center; justify-content:center;}
 .flex.vertical {flex-direction:column;}
 
-.link {color:#212121; text-decoration:none; padding:16px;}
-.link:hover {background:#EEE;}
+/* Top Nav */
+.nav {z-index:100; background:#2196F3; height:50px; width:100%; top:0; left:0; position:fixed; overflow:hidden; box-shadow:0 2px 4px 0 rgba(0,0,0,0.3);}
+.nav .title {
+	display:block; margin:0 24px; line-height:50px; font-size:24px;
+	-webkit-transform:translateY(0);
+	transform:translateY(0);
+}
+.nav .title .link {color:white;}
 
-.content {width:100%; height:100%;}
+/* Content */
+
+.content {position:fixed; top:50px; bottom:0; width:100%; overflow-x:hidden; overflow-y:auto;}
 
 .list {width:640px}
 .icon {margin-right:8px; width:64px; height:auto; vertical-align:middle;}
