--- a/css/material.css
+++ b/css/material.css
@@ -5,10 +5,10 @@
  * Disabled Text - #000 38%
  */
 html, label, button, input, textarea, blockquote, pre, code {
+	color:rgba(0,0,0,0.87);
 	-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
 	font-family:Roboto,RobotoDraft,arial,'Noto Sans KR','Nanum Gothic',sans-serif;
 }
-html, body {color:rgba(0,0,0,0.87);}
 
 h1, h2, h3, h4, h5, h6 {margin:0; font-weight:normal;}
 h1 {margin:36px 0 12px 0; font-size:42px;}
