material: blockquote, pre, code make brighter

--- a/css/material.css
+++ b/css/material.css
@@ -30,4 +30,4 @@ table {border-spacing:0;}
 th, td {padding:6px 12px;}
 th {background:#EEE;}
 
-blockquote, pre, code {background:#EEE; margin:0 0 16px; padding:16px;}
+blockquote, pre, code {background:#F5F5F5; margin:0 0 16px; padding:16px;}
