--- a/css/material.css
+++ b/css/material.css
@@ -16,7 +16,7 @@ h2 {margin:36px 0 12px 0;font-size:36px;}
 h3 {margin:24px 0 12px 0;font-size:28px;}
 h4, h5, h6 {margin:24px 0 12px 0; font-size:16px;}
 
-a {color:#03A9F4;}
+a {color:#03A9F4; text-decoration:none;}
 p {margin:0 0 12px 0; line-height:1.7;}
 
 ol, ul {padding-left:32px;}
