layouts: defaults: Add side menu

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,8 @@
 		<nav class="nav">
 			<span class="title anim-transform"><a class="link ellipsis" href="/">OPNay</a></span>
 		</nav>
+		<aside class="side">
+		</aside>
 		<div class="content">{{ content }}</div>
 	</body>
 </html>
