--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,9 @@ html, body {margin:0; padding:0;}
 }
 .nav .title .link {color:white;}
 
+/* Side */
+.side {z-index:120; background:#FFF; top:0; bottom:0; position:fixed; overflow-x:hidden; overflow-y:auto; width:320px; box-shadow:0 0 16px rgba(0,0,0,0.3);}
+
 /* Content */
 
 .content {position:fixed; top:50px; bottom:0; width:100%; overflow-x:hidden; overflow-y:auto;}
