--- a/css/index.css
+++ b/css/index.css
@@ -19,6 +19,16 @@ html, body {margin:0; padding:0;}
 /* Side */
 .side {z-index:120; background:#FFF; top:0; bottom:0; position:fixed; overflow-x:hidden; overflow-y:auto; width:320px; box-shadow:0 0 16px rgba(0,0,0,0.3);}
 
+.dday {padding:0 18px;}
+.dday .progress {position:relative; margin:18px 0; width:100%; height:28px;}
+.dday .progress .progress-bar {width:0%; height:100%; transition:width 500ms ease-out;}
+.dday .progress .progress-text {margin:-28px 0 0 0; width:100%; line-height:1.75; color:white; text-align:center; font-weight:bold;}
+.dday .info {margin:16px 0; line-height:1.75; font-size:14px;}
+.dday .info p {margin:0;}
+
+.progress {background:#BBDEFB;}
+.progress .progress-bar {background:#2196F3;}
+
 /* Content */
 
 .content {position:fixed; top:50px; bottom:0; width:100%; overflow-x:hidden; overflow-y:auto;}
