--- a/css/index.css
+++ b/css/index.css
@@ -18,6 +18,10 @@ html, body {margin:0; padding:0;}
 
 /* Side */
 .side {z-index:120; background:#FFF; top:0; bottom:0; position:fixed; overflow-x:hidden; overflow-y:auto; width:320px; box-shadow:0 0 16px rgba(0,0,0,0.3);}
+.side .hr {border:none; border-bottom:1px solid rgba(0,0,0,0.12); box-sizing:border-box;}
+.side .item {display:block; padding:0 12px; height:48px; line-height:48px; font-size:16px;}
+
+.side .title {height:64px; line-height:64px; font-size:24px;}
 
 .dday {padding:0 18px;}
 .dday .progress {position:relative; margin:18px 0; width:100%; height:28px;}
