js: Use defer on dday script.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 		</script>
 
 		<!-- Addon -->
-		<script type="text/javascript" src="/js/dday.js"></script>
+		<script type="text/javascript" defer src="/js/dday.js"></script>
 	</head>
 	<body>
 		<nav class="nav">
