--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,9 +30,12 @@
 		<script type="text/javascript" defer src="/js/dday.js"></script>
 	</head>
 	<body>
-		<nav class="nav">
-			<span class="title anim-transform"><a class="link ellipsis" href="/">OPNay</a></span>
-		</nav>
+		<div class="wrap flex vertical">
+			<nav class="nav">
+				<span class="title anim-transform"><a class="link ellipsis" href="/">OPNay</a></span>
+			</nav>
+			<div class="content flex-1">{{ content }}</div>
+		</div>
 		<aside class="side">
 			<div class="title item hr"><a class="link">OPNay</a></div>
 			<div class="dday">
@@ -46,6 +49,5 @@
 				</div>
 			</div>
 		</aside>
-		<div class="content">{{ content }}</div>
 	</body>
 </html>
