--- a/css/index.css
+++ b/css/index.css
@@ -1,14 +1,15 @@
 @charset "utf-8";
 
-html, body {margin:0; padding:0;}
+html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 
 .ellipsis {overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
 .flex {display:-webkit-box; display:-webkit-flex; display:-ms-flex; display:flex;}
 .flex.center {align-items:center; justify-content:center;}
 .flex.vertical {flex-direction:column;}
+.flex-1 {-webkit-flex:1; -ms-flex:1; -moz-flex:1; flex:1;}
 
 /* Top Nav */
-.nav {z-index:100; background:#2196F3; height:64px; width:100%; top:0; left:0; position:fixed; overflow:hidden; box-shadow:0 2px 4px 0 rgba(0,0,0,0.3);}
+.nav {z-index:100; background:#2196F3; height:64px; overflow:hidden; box-shadow:0 2px 4px 0 rgba(0,0,0,0.3);}
 .nav .title {
 	display:block; margin:0 24px; line-height:64px; font-size:24px;
 	-webkit-transform:translateY(0);
@@ -35,7 +36,7 @@ html, body {margin:0; padding:0;}
 
 /* Content */
 
-.content {position:fixed; top:50px; bottom:0; width:100%; overflow-x:hidden; overflow-y:auto;}
+.content {overflow-x:hidden; overflow-y:auto;}
 
 .list {width:640px}
 .icon {margin-right:8px; width:64px; height:auto; vertical-align:middle;}
