--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,10 +8,9 @@
 		<link rel="stylesheet" href="/css/index.css">
 		<link rel="stylesheet" href="/css/material.css">
 
-		<!--<link rel="stylesheet" href="https://fonts.googleapis.com/earlyaccess/notosanskr.css" />-->
 		<link rel="stylesheet" href="/fonts/notosanskr.css">
 		<link rel="stylesheet" href="/fonts/materialicons.css">
-		<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto">
+		<link rel="stylesheet" href="/fonts/roboto.css">
 
 		<!-- Verification -->
 		<meta name="naver-site-verification" content="f7309447c068e3ff9e40fcbf6d8cbff429d6ae96"/>
