layouts: defaults: Add 'desktop' class in body tag

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,7 +28,7 @@
 		<!-- Addon -->
 		<script type="text/javascript" defer src="/js/dday.js"></script>
 	</head>
-	<body>
+	<body class="desktop">
 		<div class="wrap flex vertical">
 			<nav class="nav">
 				<span class="title anim-transform"><a class="link ellipsis" href="/">OPNay</a></span>
