--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,9 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 .flex.vertical {flex-direction:column;}
 .flex-1 {-webkit-flex:1; -ms-flex:1; -moz-flex:1; flex:1;}
 
+.desktop {display:-webkit-box; display:-webkit-flex; display:-ms-flex; display:flex;}
+.desktop .wrap {-webkit-flex:1; -ms-flex:1; -moz-flex:1; flex:1;}
+
 /* Top Nav */
 .nav {z-index:100; background:#2196F3; height:64px; overflow:hidden; box-shadow:0 2px 4px 0 rgba(0,0,0,0.3);}
 .nav .title {
@@ -18,7 +21,8 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 .nav .title .link {color:white;}
 
 /* Side */
-.side {z-index:120; background:#FFF; top:0; bottom:0; position:fixed; overflow-x:hidden; overflow-y:auto; width:320px; box-shadow:0 0 16px rgba(0,0,0,0.3);}
+.side {z-index:120; background:#FFF; overflow-x:hidden; overflow-y:auto; width:320px; border-right:1px solid rgba(0,0,0,0.12);}
+.tablet .side {position:fixed; top:0; bottom:0; box-shadow:0 0 16px rgba(0,0,0,0.3);}
 .side .hr {border:none; border-bottom:1px solid rgba(0,0,0,0.12); box-sizing:border-box;}
 .side .item {display:block; padding:0 12px; height:48px; line-height:48px; font-size:16px;}
 
@@ -35,7 +39,6 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 .progress .progress-bar {background:#2196F3;}
 
 /* Content */
-
 .content {overflow-x:hidden; overflow-y:auto;}
 
 .list {width:640px}
