--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,8 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 .desktop .wrap {-webkit-flex:1; -ms-flex:1; -moz-flex:1; flex:1;}
 
 /* Top Nav */
-.nav {z-index:100; background:#2196F3; height:64px; overflow:hidden; box-shadow:0 2px 4px 0 rgba(0,0,0,0.3);}
+.nav {z-index:100; background:#2196F3; height:64px; overflow:hidden;}
+.tablet .nav, .mobile .nav {box-shadow:0 2px 4px 0 rgba(0,0,0,0.3);}
 .nav .title {
 	display:block; margin:0 24px; line-height:64px; font-size:24px;
 	-webkit-transform:translateY(0);
