dday: dived from default layout to includes directory.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,16 +31,7 @@
 	<body class="desktop">
 		<aside class="side">
 			<div class="title item hr"><a class="link">OPNay</a></div>
-			<div class="dday">
-				<div class="progress">
-					<div class="progress-bar"></div>
-					<p class="progress-text"></p>
-				</div>
-				<div class="info">
-					<p>군 복무 기간 : 2015.12.08 ~ 2017.12.07</p>
-					<p>제대일까지 : <span class="dday-text"></span></p>
-				</div>
-			</div>
+			{% include dday.html %}
 		</aside>
 		<div class="wrap flex vertical">
 			<nav class="nav">
