--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,19 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
 		<title>OPNay's Lab</title>
+		<!-- favicon -->
+		<link rel="apple-touch-icon" sizes="180x180" href="/image/favicons/apple-touch-icon.png">
+		<link rel="icon" type="image/png" href="/image/favicons/192.png" sizes="192x192">
+		<link rel="icon" type="image/png" href="/image/favicons/32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="/image/favicons/16.png" sizes="16x16">
+		<link rel="manifest" href="/image/favicons/manifest.json">
+		<link rel="mask-icon" href="/image/favicons/safari-pinned-tab.svg" color="#5bbad5">
+		<link rel="shortcut icon" href="/image/favicons/favicon.ico">
+		<meta name="msapplication-config" content="/image/favicons/browserconfig.xml">
+		<meta name="theme-color" content="#ffffff">
+		
+		<link rel="shortcut icon" href="/image/favicon/50x50.png">
+		<link rel="icon" type="image/png" href="/image/favicon/192x192.png" sizes="192x192">
 		<link rel="stylesheet" href="/css/index.css">
 		<link rel="stylesheet" href="/css/material.css">
 
