css: Renamed default.css from index.css

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
 		<meta name="msapplication-config" content="/image/favicons/browserconfig.xml">
 		<meta name="theme-color" content="#ffffff">
 		
-		<link rel="stylesheet" href="/css/index.css">
+		<link rel="stylesheet" href="/css/default.css">
 		<link rel="stylesheet" href="/css/material.css">
 
 		<link rel="stylesheet" href="/fonts/notosanskr.css">
