--- a/css/material.css
+++ b/css/material.css
@@ -17,7 +17,7 @@ h3 {margin:24px 0 12px 0;font-size:28px;}
 h4, h5, h6 {margin:24px 0 12px 0; font-size:16px;}
 
 a {color:#03A9F4; text-decoration:none;}
-p {margin:0 0 12px 0; line-height:1.7;}
+p {margin:0; line-height:1.7;}
 
 ol, ul {padding-left:32px;}
 li {line-height:1.5;}
