--- a/css/default.css
+++ b/css/default.css
@@ -11,22 +11,18 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 .desktop {display:-webkit-box; display:-webkit-flex; display:-ms-flex; display:flex;}
 .desktop .wrap {-webkit-flex:1; -ms-flex:1; -moz-flex:1; flex:1;}
 
-/* Top Nav */
-.nav {z-index:100; background:#2196F3; height:64px; overflow:hidden;}
-.tablet .nav, .mobile .nav {box-shadow:0 2px 4px 0 rgba(0,0,0,0.3);}
-.nav .title {
-	display:block; margin:0 24px; line-height:64px; font-size:24px;
-	-webkit-transform:translateY(0);
-	transform:translateY(0);
-}
-.nav .title .link {color:white;}
-
 /* Side */
 .side {z-index:120; background:#FFF; overflow-x:hidden; overflow-y:auto; width:320px; border-right:1px solid rgba(0,0,0,0.12);}
 .tablet .side {position:fixed; top:0; bottom:0; box-shadow:0 0 16px rgba(0,0,0,0.3);}
 .side .hr {border:none; border-bottom:1px solid rgba(0,0,0,0.12); box-sizing:border-box;}
 .side .item {display:block; padding:0 12px;}
 
-.side .title {height:64px; line-height:64px; font-size:24px;}
-/* Content */
-.content {overflow-x:hidden; overflow-y:auto;}
+.side .title {background:#2196F3; padding:16px; text-align:center; font-size:32px;}
+.side .title .link {color:white;}
+.side .title .profile {border-radius:50%;}
+.side .title .ext {display:inline-block; width:32px; height:32px; fill:white; line-height:1;}
+.side .title .ext:hover {fill:rgba(255,255,255,.75);}
+.side .title .ext svg {width:24px; height:24px;}
+
+/* Content Wrap */
+.wrap {overflow-x:hidden; overflow-y:auto;}
