includes: icon: Make icon directory in '_includes'

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,9 +46,9 @@
 					<p><img class="profile" src="/user.jpg" width="128px" height="128px"></p>
 					<a class="link ellipsis" href="/"><p>OPNay</p></a>
 					<p>
-						<a class="link ext" href="https://facebook.com/opnay">{% include ico_facebook.svg %}</a>
-						<a class="link ext" href="https://twitter.com/opnay">{% include ico_twitter.svg %}</a>
-						<a class="link ext" href="https://github.com/opnay">{% include ico_github.svg %}</a>
+						<a class="link ext" href="https://facebook.com/opnay">{% include icon/facebook.svg %}</a>
+						<a class="link ext" href="https://twitter.com/opnay">{% include icon/twitter.svg %}</a>
+						<a class="link ext" href="https://github.com/opnay">{% include icon/github.svg %}</a>
 					</p>
 				</a>
 			</div>
