layouts: default: Fix profile image

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,7 +43,7 @@
 		<aside class="side">
 			<div class="title item hr">
 				<a class="link ellipsis" href="/">
-					<p><img class="profile" src="/user.jpg" width="128px" height="128px"></p>
+					<p><img class="profile" src="/image/profile.jpg" width="128px" height="128px"></p>
 					<a class="link ellipsis" href="/"><p>OPNay</p></a>
 					<p>
 						<a class="link ext" href="https://facebook.com/opnay">{% include icon/facebook.svg %}</a>
