layouts: default: Fix twitter link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,7 +47,7 @@
 					<a class="link ellipsis" href="/"><p>OPNay</p></a>
 					<p>
 						<a class="link ext" href="https://facebook.com/opnay">{% include icon/facebook.svg %}</a>
-						<a class="link ext" href="https://twitter.com/opnay">{% include icon/twitter.svg %}</a>
+						<a class="link ext" href="https://twitter.com/opnay_dev">{% include icon/twitter.svg %}</a>
 						<a class="link ext" href="https://github.com/opnay">{% include icon/github.svg %}</a>
 					</p>
 				</a>
