dday: Move script for dday to '.dday'

--- a/_includes/dday.html
+++ b/_includes/dday.html
@@ -1,4 +1,5 @@
 <div class="dday item">
+	<script type="text/javascript" defer src="/js/dday.js"></script>
 	<div class="progress">
 		<div class="progress-bar"></div>
 		<p class="progress-text"></p>
