--- a/_includes/dday.html
+++ b/_includes/dday.html
@@ -9,10 +9,10 @@
 		<p>제대일까지 : <span class="dday-text"></span></p>
 	</div>
 	<style>
-.dday .progress {position:relative; margin:18px 0; width:100%; height:28px;}
+.dday .progress {position:relative; margin:0; width:100%; height:28px;}
 .dday .progress .progress-bar {width:0%; height:100%; transition:width 500ms;}
 .dday .progress .progress-text {position:absolute; top:0; bottom:0; width:100%; line-height:1.75; color:white; text-align:center; font-weight:bold;}
-.dday .info {margin:16px 0; line-height:1.75; font-size:14px;}
+.dday .info {margin:16px 0 0; line-height:1.75; font-size:14px;}
 
 .dday .progress {background:#BBDEFB;}
 .dday .progress .progress-bar {background:#2196F3;}
