layouts: default: Add chkWindow script - chkWindow is function for checking browser window size.   -768: mobile, 768-1024: tablet, 1024-: desktop

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,5 +59,23 @@
 			</div>
 		</aside>
 		<div class="wrap">{{ content }}</div>
+		<script>
+			(function ($) {
+				$body = $('body'), $win = $(window);
+				function chkWindow() {
+					if (($win.width() >= 1024) && !$body.hasClass('desktop')) {
+						console.log('Change Window size to Desktop');
+						$body.addClass('desktop').removeClass('tablet mobile');
+					} else if (($win.width() >= 768) && ($win.width() < 1024) && !$body.hasClass('tablet')) {
+						console.log('Change Window size to Tablet');
+						$body.addClass('tablet').removeClass('desktop mobile');
+					} else if (($win.width() < 768) && !$body.hasClass('mobile')) {
+						console.log('Change Window size to Mobile');
+						$body.addClass('mobile').removeClass('desktop tablet');
+					}
+				};
+				$win.resize(chkWindow), chkWindow();
+			})(jQuery);
+		</script>
 	</body>
 </html>
