--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,8 @@
 				.list .link {color:#212121; text-decoration:none; padding:8px;}
 				.list .link:hover {background:#EEE;}
 				.icon {padding:8px; width:24px; height:auto; vertical-align:middle;}
+				.mobile .list {font-size:18px}
+				.mobile .icon {width:32px; height:32px;}
 				</style>
 			</div>
 		</aside>
