--- a/css/default.css
+++ b/css/default.css
@@ -8,12 +8,13 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 .flex.vertical {flex-direction:column;}
 .flex-1 {-webkit-flex:1; -ms-flex:1; -moz-flex:1; flex:1;}
 
-.desktop {display:-webkit-box; display:-webkit-flex; display:-ms-flex; display:flex;}
+.desktop, .tablet, .mobile {display:-webkit-box; display:-webkit-flex; display:-ms-flex; display:flex;}
 .desktop .wrap {-webkit-flex:1; -ms-flex:1; -moz-flex:1; flex:1;}
 
 /* Side */
 .side {z-index:120; background:#FFF; overflow-x:hidden; overflow-y:auto; width:320px; border-right:1px solid rgba(0,0,0,0.12);}
 .tablet .side {position:fixed; top:0; bottom:0; box-shadow:0 0 16px rgba(0,0,0,0.3);}
+.mobile .side {position:fixed; width:100%; height:100%;}
 .side .hr {border:none; border-bottom:1px solid rgba(0,0,0,0.12); box-sizing:border-box;}
 .side .item {display:block; padding:0 12px;}
 
