--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -40,7 +40,7 @@
 		<aside class="side">
 			<div class="title item hr">
 				<p><img class="profile" src="/image/profile.jpg" width="128px" height="128px"></p>
-				<a class="link ellipsis" href="/"><p>OPNay</p></a>
+				<p><a class="link ellipsis" href="/">OPNay</a></p>
 				<p>
 					<a class="link ext" href="https://facebook.com/opnay">{% include icon/facebook.svg %}</a>
 					<a class="link ext" href="https://twitter.com/opnay_dev">{% include icon/twitter.svg %}</a>
