layouts: default: Move profile size style to 'default.css'

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -39,7 +39,7 @@
 	<body class="desktop">
 		<aside class="side">
 			<div class="title item hr">
-				<p><img class="profile" src="/image/profile.jpg" width="128px" height="128px"></p>
+				<p><img class="profile" src="/image/profile.jpg"></p>
 				<p><a class="link ellipsis" href="/">OPNay</a></p>
 				<p>
 					<a class="link ext" href="https://facebook.com/opnay">{% include icon/facebook.svg %}</a>
