--- a/css/default.css
+++ b/css/default.css
@@ -21,7 +21,7 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 
 .side .title {background:#2196F3; padding:16px; text-align:center; font-size:32px;}
 .side .title .link {color:white;}
-.side .title .profile {border-radius:50%;}
+.side .title .profile {border-radius:50%; width:128px; height:auto;}
 .side .title .ext {display:inline-block; width:32px; height:32px; fill:white; line-height:1;}
 .side .title .ext:hover {fill:rgba(255,255,255,.75);}
 .side .title .ext svg {width:24px; height:24px;}
