--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,18 +23,8 @@
 		<link rel="stylesheet" href="/fonts/materialicons.css">
 		<link rel="stylesheet" href="/fonts/roboto.css">
 
-		<!-- Verification -->
-		<meta name="naver-site-verification" content="f7309447c068e3ff9e40fcbf6d8cbff429d6ae96"/>
 		<script type="text/javascript" src="/js/jquery-2.1.4.min.js"></script>
-		<script>
-		(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-		(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-		m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-		})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-		ga('create', 'UA-68430622-3', 'auto');
-		ga('send', 'pageview');
-		</script>
+		{% include verification.html %}
 	</head>
 	<body class="desktop">
 		<aside class="side">
