layouts: default: Add '.side' animate (yet animate active function)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
 		{% include verification.html %}
 	</head>
 	<body class="desktop">
-		<aside class="side">
+		<aside class="side animate">
 			<div class="title item hr">
 				<p><img class="profile" src="/image/profile.jpg"></p>
 				<p><a class="link ellipsis" href="/">OPNay</a></p>
