--- a/css/default.css
+++ b/css/default.css
@@ -9,9 +9,6 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 .flex-1 {-webkit-flex:1; -ms-flex:1; -moz-flex:1; flex:1;}
 .animate {transition:transform 200ms;}
 
-.desktop, .tablet, .mobile {display:-webkit-box; display:-webkit-flex; display:-ms-flex; display:flex;}
-.desktop .wrap {-webkit-flex:1; -ms-flex:1; -moz-flex:1; flex:1;}
-
 /* Side */
 .side {z-index:120; background:#FFF; overflow-x:hidden; overflow-y:auto; width:320px;}
 .desktop .side {border-right:1px solid rgba(0,0,0,0.12);}
@@ -31,6 +28,13 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 
 /* Content Wrap */
 .wrap {background:#EEE; overflow-x:hidden; overflow-y:auto;}
+
+.nav {position:fixed; top:0; background:#2196F3; width:100%; height:64px;}
+.nav .menu {position:absolute; top:0; left:0; padding:14px; width:64px; height:64px; box-sizing:border-box;}
+.nav .menu .button {display:block; padding:6px; width:36px; height:36px; box-sizing:border-box;}
+.nav .menu .button svg {fill:white; width:24px; height:24px;}
+
+.content {padding-top:64px;}
 
 .card {background:#FFF; padding:18px; box-sizing:border-box;}
 .desktop .card {margin:18px auto; padding:18px; width:640px; border-radius:2px; box-shadow:0 1px 2px rgba(0,0,0,0.3);}
