layouts: default: Add animte '.nav' for all window size

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
 			</div>
 		</aside>
 		<div class="wrap flex-1">
-			<nav class="nav">
+			<nav class="nav animate">
 				<div class="menu"><a class="button" href="#">{% include icon/menu.svg %}</a></div>
 			</nav>
 			<div class="content">{{ content }}</div>
