layouts: default: Change close icon to arrow-left

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
 	<body class="desktop flex">
 		<aside class="side animate">
 			<div class="close">
-				<a class="button" href="#">{% include icon/close.svg %}</a>
+				<a class="button" href="#">{% include icon/arrow-left.svg %}</a>
 			</div>
 			<div class="title item hr">
 				<p><img class="profile" src="/image/profile.jpg"></p>
