layouts: default: Remove unused classes('.side .item','.side .hr')

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 			<div class="close">
 				<a class="button" href="#">{% include icon/arrow-left.svg %}</a>
 			</div>
-			<div class="title item hr">
+			<div class="title">
 				<p><img class="profile" src="/image/profile.jpg"></p>
 				<p><a class="link ellipsis" href="/">OPNay</a></p>
 				<p>
