styles: default: Update '.side .profile' - Renamed from '.side .title' - Change some style

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,8 +31,8 @@
 			<div class="close">
 				<a class="button" href="#">{% include icon/arrow-left.svg %}</a>
 			</div>
-			<div class="title">
-				<p><img class="profile" src="/image/profile.jpg"></p>
+			<div class="profile">
+				<p><img class="img" src="/image/profile.jpg"></p>
 				<p><a class="link ellipsis" href="/">OPNay</a></p>
 				<p>
 					<a class="link ext" href="https://facebook.com/opnay">{% include icon/facebook.svg %}</a>
