--- a/css/default.css
+++ b/css/default.css
@@ -23,12 +23,12 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 .side .close {position:absolute; top:0; left:0; padding:14px; width:64px; height:64px; box-sizing:border-box;}
 .desktop .side .close {display:none;}
 
-.side .title {background:#2196F3; padding:16px; text-align:center; font-size:32px;}
-.side .title .link {color:white;}
-.side .title .profile {border-radius:50%; width:128px; height:auto;}
-.side .title .ext {display:inline-block; width:32px; height:32px; fill:white; line-height:1;}
-.side .title .ext:hover {fill:rgba(255,255,255,.75);}
-.side .title .ext svg {width:24px; height:24px;}
+.side .profile {background:#2196F3; padding:32px; text-align:center; font-size:32px;}
+.side .profile .link {color:white;}
+.side .profile .img {border-radius:50%; width:128px; height:auto;}
+.side .profile .ext {display:inline-block; width:32px; height:32px; fill:white; line-height:1;}
+.side .profile .ext:hover {fill:rgba(255,255,255,.75);}
+.side .profile .ext svg {width:24px; height:24px;}
 
 .list {width:100%}
 .list .link {color:#212121; text-decoration:none; padding:8px;}
