styles: default: Update '.side .list' - add '.title' for matching vertical align - Update some styles.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,8 +41,8 @@
 				</p>
 			</div>
 			<div class="list flex vertical">
-				<a class="link" href="http://blog.opnay.com"><img class="icon" src="./image/tistory.svg" alt="Tistory" />블로그</a>
-				<a class="link" href="#"><img class="icon" src="./image/application.svg" alt="Application" />애플리케이션(준비중..)</a>
+				<a class="link" href="http://blog.opnay.com"><img class="icon" src="./image/tistory.svg" alt="Tistory" /><span class="title">블로그</span></a>
+				<a class="link" href="#"><img class="icon" src="./image/application.svg" alt="Application" /><span class="title">애플리케이션(준비중)</span></a>
 			</div>
 		</aside>
 		<div class="wrap flex-1">
