--- a/css/default.css
+++ b/css/default.css
@@ -30,12 +30,12 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 .side .profile .ext:hover {fill:rgba(255,255,255,.75);}
 .side .profile .ext svg {width:24px; height:24px;}
 
-.list {width:100%}
-.list .link {color:#212121; text-decoration:none; padding:8px;}
-.list .link:hover {background:#EEE;}
-.icon {padding:8px; width:24px; height:auto; vertical-align:middle;}
-.mobile .list {font-size:18px}
-.mobile .icon {width:32px; height:32px;}
+.side .list .link {text-decoration:none; padding:8px;}
+.side .list .link:hover {background:#EEE;}
+.side .list .title {vertical-align:middle; color:rgba(0,0,0,0.87);}
+.side .list .icon {padding:8px; width:24px; height:auto; vertical-align:middle;}
+.mobile .side .list {font-size:18px}
+.mobile .side .list .icon {width:32px; height:32px;}
 
 /* Content Wrap */
 .wrap {background:#EEE; overflow-x:hidden; overflow-y:auto;}
