--- a/_includes/verification.html
+++ b/_includes/verification.html
@@ -6,3 +6,10 @@ m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 ga('create', 'UA-68430622-2', 'auto');ga('send', 'pageview');
 </script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-2339446308971759",
+    enable_page_level_ads: true
+  });
+</script>
