--- a/css/default.css
+++ b/css/default.css
@@ -39,13 +39,13 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 .mobile .side .list .icon {width:32px; height:32px;}
 
 /* Content Wrap */
-.wrap {background:#EEE; overflow-x:hidden; overflow-y:auto;}
+.wrap {background:#EEE;}
 
 .nav {position:fixed; top:0; background:#2196F3; width:100%; height:64px;}
 .desktop .nav {transform:translateY(-100%);}
 .nav .menu {position:absolute; top:0; left:0; padding:14px; width:64px; height:64px; box-sizing:border-box;}
 
-.content {padding-top:64px;}
+.content {padding-top:64px; height:100%; overflow-x:hidden; overflow-y:auto; box-sizing:border-box;}
 .desktop .content {padding-top:0;}
 
 .card {background:#FFF; padding:18px; box-sizing:border-box;}
