--- a/css/material.css
+++ b/css/material.css
@@ -12,6 +12,8 @@ html {
 }
 label, button, input, textarea, blockquote, pre, code {font:inherit;}
 
+article, p, li {line-height:1.5;}
+
 h1, h2, h3, h4, h5, h6 {margin:0; font-weight:normal;}
 h1 {margin:36px 0 12px 0; font-size:42px;}
 h2 {margin:36px 0 12px 0;font-size:36px;}
@@ -19,10 +21,9 @@ h3 {margin:24px 0 12px 0;font-size:28px;}
 h4, h5, h6 {margin:24px 0 12px 0; font-size:16px;}
 
 a {color:#03A9F4; text-decoration:none;}
-p {margin:0; line-height:1.7;}
+p {margin:0;}
 
 ol, ul {padding-left:32px;}
-li {line-height:1.5;}
 
 hr {border:0; border-top:1px solid rgba(0,0,0,0.12);}
 
