--- a/css/default.css
+++ b/css/default.css
@@ -48,7 +48,6 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 .content {padding-top:64px; height:100%; overflow-x:hidden; overflow-y:auto; box-sizing:border-box;}
 .desktop .content {padding-top:0;}
 
-.card {background:#FFF; padding:18px; box-sizing:border-box;}
-.desktop .card, .tablet .card{margin:18px auto; width:640px; border-radius:2px; box-shadow:0 1px 2px rgba(0,0,0,0.3);}
+.desktop .card, .tablet .card {margin:18px auto; width:640px;}
 .mobile .card {width:100%;}
 .mobile .card ~ .card{border-top:1px solid #DDD;}
