--- a/css/material.css
+++ b/css/material.css
@@ -26,7 +26,7 @@ p {margin:0;}
 
 ol, ul {padding-left:32px;}
 
-hr {border:0; border-top:1px solid rgba(0,0,0,0.12);}
+hr {border:none; border-top:1px solid rgba(0,0,0,0.12);}
 
 fieldset {margin:0; padding:0; border:0;}
 
