--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,7 +31,7 @@
 			<div class="close">
 				<a class="button" href="#">{% include icon/arrow-left.svg %}</a>
 			</div>
-			<div class="profile">
+			<div class="profile bg-primary">
 				<p><img class="img" src="/image/profile.jpg"></p>
 				<p><a class="link ellipsis" href="/">OPNay</a></p>
 				<p>
@@ -49,8 +49,8 @@
 				{% endfor %}
 			</div>
 		</aside>
-		<div class="wrap flex-1">
-			<nav class="nav animate">
+		<div class="wrap bg-gray flex-1">
+			<nav class="nav bg-primary animate">
 				<div class="menu"><a class="button" href="#">{% include icon/menu.svg %}</a></div>
 				<script>
 					(function ($) {
