--- a/css/default.css
+++ b/css/default.css
@@ -12,7 +12,7 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 .flex.vertical {flex-direction:column;}
 .flex-1 {-webkit-flex:1; -ms-flex:1; -moz-flex:1; flex:1;}
 .animate {transition:transform 200ms;}
-.button {display:block; padding:6px; width:36px; height:36px; box-sizing:border-box;}
+.button {display:block; padding:6px; width:36px; height:36px;}
 .button svg {fill:white; width:24px; height:24px;}
 
 /* Side */
@@ -24,7 +24,7 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 
 .cover {z-index:110; background:rgba(0,0,0,0.1); position:fixed; width:100%; height:100%;}
 
-.side .close {position:absolute; top:0; left:0; padding:14px; width:64px; height:64px; box-sizing:border-box;}
+.side .close {position:absolute; top:0; left:0; padding:14px; width:64px; height:64px;}
 .desktop .side .close {display:none;}
 
 .side .profile {padding:24px; text-align:center; font-size:32px;}
@@ -35,18 +35,18 @@ html, body, .wrap {margin:0; padding:0; width:100%; height:100%;}
 .side .profile .social:hover {fill:rgba(255,255,255,.75);}
 .side .profile .social svg {width:24px; height:24px;}
 
-.side .list .link {text-decoration:none; padding:8px;}
+.side .list .link {text-decoration:none; padding:16px;}
 .side .list .link:hover {background:#EEE;}
 .side .list .title {vertical-align:middle; color:rgba(0,0,0,0.87);}
-.side .list .icon {padding:8px; width:24px; height:auto; vertical-align:middle;}
+.side .list .icon {margin-right:8px; width:24px; height:auto; vertical-align:middle;}
 .mobile .side .list {font-size:18px}
 .mobile .side .list .icon {width:32px; height:32px;}
 
 /* Content Wrap */
 .desktop .nav {transform:translateY(-100%);}
-.nav .menu {position:absolute; top:0; left:0; padding:14px; width:64px; height:64px; box-sizing:border-box;}
+.nav .menu {position:absolute; top:0; left:0; padding:14px; width:64px; height:64px;}
 
-.content {padding-top:64px; height:100%; overflow-x:hidden; overflow-y:auto; box-sizing:border-box;}
+.content {padding-top:64px; height:100%; overflow-x:hidden; overflow-y:auto;}
 .desktop .content {padding-top:0;}
 
 .desktop .card, .tablet .card {margin:18px auto; width:640px;}
