--- a/css/material.css
+++ b/css/material.css
@@ -4,6 +4,8 @@
  * Secondary Text - #000 54%
  * Disabled Text - #000 38%
  */
+* {margin:0; padding:0; box-sizing:border-box;}
+
 html {
 	color:rgba(0,0,0,0.87);
 	-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
@@ -40,6 +42,6 @@ pre {background:rgba(0,0,0,0.1); margin:12px 0; padding:16px; font-size:0.9em;}
 
 .bg-gray {background:#EEE;}
 
-.card {background:white; padding:16px; border-radius:2px; box-sizing:border-box; box-shadow:0 0 2px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.12);}
+.card {background:white; padding:16px; border-radius:2px; box-shadow:0 0 2px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.12);}
 
 .nav {position:fixed; top:0; width:100%; height:64px;}
