--- a/css/material.css
+++ b/css/material.css
@@ -1,11 +1,7 @@
-/*
- * Default font colors
- * Primary Text - #000 87%
- * Secondary Text - #000 54%
- * Disabled Text - #000 38%
- */
+@charset "utf-8";
 * {margin:0; padding:0; box-sizing:border-box;}
 
+/* Tags */
 html {
 	color:rgba(0,0,0,0.87);
 	-webkit-font-smoothing:antialiased; -moz-osx-font-smoothing:grayscale;
@@ -40,9 +36,33 @@ blockquote {background:rgba(0,0,0,0.1); margin:12px 24px; padding:16px;}
 code {background:rgba(0,0,0,0.1); margin:0 2px; padding:2px 6px; font-size:0.9em;}
 pre {background:rgba(0,0,0,0.1); margin:12px 0; padding:16px; font-size:0.9em;}
 
-.bg-gray {background:#EEE;}
+/*
+ * Class
+ */
 
+/* Theme */
+.bg-gray {background:#EEE;}
+.bg-white {background:white;}
+
+.ft-white {color:white;}
+.ft-primary {color:rgba(0,0,0,0.87);}
+.ft-secondary {color:rgba(0,0,0,0.54);}
+.ft-disabled {color:rgba(0,0,0,0.38);}
+
+/* Global */
+.ellipsis {overflow:hidden; text-overflow:ellipsis; white-space:nowrap;}
+.flex {display:-webkit-box; display:-webkit-flex; display:-ms-flex; display:flex;}
+.flex.center {align-items:center; justify-content:center;}
+.flex.vertical {flex-direction:column;}
+.flex-1 {-webkit-flex:1; -ms-flex:1; -moz-flex:1; flex:1;}
+.animate {transition:transform 200ms;}
+.button {display:block; padding:6px; width:36px; height:36px;}
+.button svg {fill:white; width:24px; height:24px;}
+
+/* Components */
 .card {background:white; padding:16px; border-radius:2px; box-shadow:0 0 2px rgba(0,0,0,0.12), 0 2px 2px rgba(0,0,0,0.12);}
 
 .nav {width:100%; height:64px; transition:box-shadow linear 200ms;}
 .nav.shadow {box-shadow:0 0 8px rgba(0,0,0,0.12), 0 8px 8px rgba(0,0,0,0.24);}
+
+.cover {z-index:110; background:rgba(0,0,0,0.1); position:fixed; width:100%; height:100%;}
