--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8" />
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-		<title>OPNay's Lab</title>
+		<title>{{ page.title }}</title>
 		<!-- favicon -->
 		<link rel="apple-touch-icon" sizes="180x180" href="/image/favicons/apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="/image/favicons/192.png" sizes="192x192">
