--- a/css/default.css
+++ b/css/default.css
@@ -32,8 +32,8 @@
 .desktop .nav {transform:translateY(-100%);}
 .nav .menu {position:absolute; top:0; left:0; padding:14px; width:64px; height:64px;}
 
-.content {height:calc(100% - 64px); overflow-x:hidden; overflow-y:auto;}
-.desktop .content {height:100%;}
+.content {height:100%; overflow-x:hidden; overflow-y:auto;}
+.tablet .content, .mobile .content {margin-top:64px; height:calc(100% - 64px);}
 
 .desktop .card, .tablet .card {margin:18px auto; width:640px;}
 .mobile .card {width:100%;}
