layouts: Theme color styles are moved to base.html

--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -25,6 +25,11 @@
 
 		<script type="text/javascript" src="/js/jquery-2.1.4.min.js"></script>
 		{% include verification.html %}
+
+		<style>
+			.bg-p {background:{{ page.theme.primary }};}
+			.bg-s {background:{{ page.theme.secondary }};}
+		</style>
 	</head>
 	<body class="desktop flex">
 		{{ content }}
